# py_vfr

./: CMakeLists.txt  README.md
src/: videoreader.cpp  videoreader_bindings.cpp
